# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  buildspec.yml
.github/workflows/: rust.yml
migrations/: 20220410191054_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
