[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.5.1", features = ["headers"] }
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }

[dev-dependencies]
reqwest = "0.11.10"
