[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.5.1", features = ["headers"] }
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
]


[dev-dependencies]
reqwest = "0.11.10"
