[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.5.1", features = ["headers"] }
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
serde = { version = "1.0.136", features = ["derive"] }
config = { version = "0.13.0", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.2", features = ["v4"] }
tracing = "0.1.33"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.11", features = [
    "registry",
    "env-filter",
] }
tower-http = { version = "0.2.5", features = ["trace"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "3.0.1"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
    "offline",
]


[dev-dependencies]
reqwest = "0.11.10"
once_cell = "1.10.0"
